# interp-rs

./: Cargo.toml  README.md
.reuse/: dep5
src/: interp1d.rs  interp2d.rs  lib.rs
