# SPDX-FileCopyrightText: 2022 Thomas Kramer <code@tkramer.ch>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "interp"
version = "0.0.2"
authors = ["Thomas Kramer <code@tkramer.ch>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Interpolation of one and two dimensional arrays."
keywords = ["interpolation"]
readme = "README.md"
homepage = "https://codeberg.org/libreda/interp"
repository = "https://codeberg.org/libreda/interp"

[dependencies]
ndarray = "0.15"
num-traits = "0.2"

